# rule_of_40_screener-gml

./: .gitignore  AGENTS.md  BUILD.md  README.md  Rule40Screener.spec  build.py  build_nuitka.bat  build_pyinstaller.bat  pyproject.toml
docs/: README.md  api_design.md  architecture.md  config.yaml  development_guide.md  requirements.txt  rule_of_40_screener_要求定義書_v_1.md  ui_specifications.md
src/: __init__.py  app.py  config.yaml
src/core/: __init__.py
src/core/adapters/: __init__.py  base.py  csv_source.py  jpx_listed.py  nasdaq_txt.py  wikipedia_sp500.py
src/core/application/: __init__.py  export_service.py  screening_service.py
src/core/data/: __init__.py  cache.py  config_loader.py  yf_client.py
src/core/domain/: __init__.py  models.py  rule40.py
src/ui/: __init__.py  main_window.py  main_window.py.backup
src/ui/dialogs/: __init__.py  settings_dialog.py
src/ui/themes/: __init__.py  dark_theme.py  light_theme.py
src/ui/views/: __init__.py
src/ui/widgets/: __init__.py  results_table.py  side_bar.py
src/ui/workers/: __init__.py  screening_worker.py
tests/: __init__.py  conftest.py
tests/unit/: test_rule40.py
